[gd_scene load_steps=7 format=2]

[ext_resource path="res://core/AdminSideBar/HeroCard.gd" type="Script" id=1]
[ext_resource path="res://Futura Std Medium.otf" type="DynamicFontData" id=2]
[ext_resource path="res://gameobjects/Buttons/DeleteButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://gameobjects/Buttons/EditButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Hero-Sprite.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[node name="HeroCard" type="Control"]
anchor_left = 0.016
anchor_right = 0.016
margin_left = -138.592
margin_right = 138.408
margin_bottom = 52.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventImage" type="TextureRect" parent="."]
anchor_left = 0.081
anchor_right = 0.081
margin_left = -17.793
margin_top = 8.86667
margin_right = 682.207
margin_bottom = 708.867
rect_scale = Vector2( 0.0526944, 0.051947 )
texture = ExtResource( 5 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeroName" type="Label" parent="."]
anchor_left = 0.316
anchor_right = 0.316
margin_left = -39.0212
margin_top = 16.8943
margin_right = 42.9788
margin_bottom = 35.8943
rect_scale = Vector2( 0.528109, 0.528109 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.937255, 0.509804, 0.0392157, 1 )
text = "Hero Name"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.765
anchor_right = 0.765
margin_left = -14.8777
margin_top = 16.6429
margin_right = 3985.12
margin_bottom = 4016.64
rect_scale = Vector2( 0.00557971, 0.00545006 )

[node name="DeleteButton" parent="." instance=ExtResource( 3 )]
anchor_left = 0.896
anchor_top = -0.088
anchor_right = 0.896
anchor_bottom = -0.088
margin_left = -10.6139
margin_top = 21.9426
margin_right = 2397.39
margin_bottom = 3031.94
rect_scale = Vector2( 0.00777644, 0.00777644 )
[connection signal="pressed" from="EditButton" to="." method="_on_EditButton_button_down"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_button_down"]
